Fix dropdown hover visibility

--- a/wp-content/themes/libero-child/style.css
+++ b/wp-content/themes/libero-child/style.css
@@ -11,20 +11,21 @@ Template: libero
 .mkd-drop-down > ul > li:hover > .second,
 .mkd-drop-down > ul > li:hover > .second.mkd-drop-down-start,
 .mkd-drop-down > ul > li:focus-within > .second {
-  visibility: visible;
-  opacity: 1;
-  overflow: visible;
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+  overflow: visible !important;
   height: auto !important;
-  pointer-events: auto;
+  pointer-events: auto !important;
 }
 
 .mkd-drop-down > ul > li:hover > .second,
 .mkd-drop-down > ul > li:focus-within > .second {
-  top: 100%;
-  z-index: 20;
+  top: 100% !important;
+  z-index: 20 !important;
 }
 
 .mkd-drop-down > ul > li:hover > .second > .inner,
 .mkd-drop-down > ul > li:focus-within > .second > .inner {
-  overflow: visible;
+  overflow: visible !important;
 }
